3-tier-app/demo/00-namespace.yaml
apiVersion: v1 
kind: Namespace
metadata:
  name: app1-ns
  labels:
    app: app1
