3-tier-app/demo/01-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  namespace: app1-ns
spec:
  replicas: 2
  selector:
    labels:
      app: app1
      role: frontend
  template:
    metadata:
      labels:
        app: app1
        role: frontend
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "200m"
              memory: 128Mi
            limits:
              cpu: "200m"
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: app1-ns
spec:
  type: NodePort
  selector:
    app: app1
    role: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31000
