3-tier-app/demo/02-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: app1-ns
spec:
  replicas: 2
  selector:
    app: app1
    role: backend
  template:
    metadata:
      labels:
        app: app1
        role: backend
    spec:
      containers:
        - name: backend
          image: python:3.11-slim
          command: ["python3", "-m", "http.server", "5678"]
          ports:
            - containerPort: 5678
          resources:
            requests:
              cpu: "200m"
              memory: "128mi"
            limits:
              cpu: "200m"
              memory: "128mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: app1-ns
spec:
  type: ClusterIP
  selector:
    app: app1
    role: backend
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
