3-tier-app/demo/03-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: app1-ns
spec:
  clusterIP: None
  selector:
    app: app1
    role: db
  port:
    - protocol: TCP
      port: 3306
      target: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-sts
  namespace: app1-ns
spec:
  serviceName: db-svc
  replicas: 2
  selector:
    matchLabels:
      app: app1
      role: db
  template:
    metadata:
      labels:
        app: app1
        role: db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          port:
            - containerPort: 3306
