3-tier-app/demo/05-backend-netpol.yaml
# apiVersion: networking.k8s.io/v1
# kind: Networkpolicy
# metadata:
#   name: backend-policy
#   namespace: app1-ns
# spec:
#   policyTypes:
#     - Ingress
#     - Egress
#   podSelector:
#     matchLabels:
#       app: app1
#       role: backend
#   ingress:
#     - from:
#         - podSelector:
#             matchLabels:
#               app: app1
#               role: frontend
#       port:
#         - protocol: TCP
#           port: 5678
#   egress:
#     - to:
#         - podSelector:
#             matchLabels:
#               app: app1
#               role: db
#       port:
#         - protocol: TCP
#           port: 3306

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
  namespace: app1-ns
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: app1
      role: backend
  Ingress:
    - from:
        - podSelector:
            matchLabels:
              app: app1
              role: frontend
      port:
        - protocol: TCP
          port: 5678

  egress:
    - to:
        - podSelector:
            matchlabels:
              app: app1
              role: db
      port:
        - protocol: TCP
          port: 3306
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
